Add: 翻訳情報追加

--- a/config/locales/activerecord.ja.yml
+++ b/config/locales/activerecord.ja.yml
@@ -41,6 +41,7 @@ ja:
         state: '状態'
         description: '概要'
         eye_catch: 'アイキャッチ'
+        eyecatch_width: 'アイキャッチ幅'
         category: 'カテゴリー'
         tag: 'タグ'
         author: '著者'
@@ -56,5 +57,3 @@ ja:
             password_confirmation:
               blank: 'パスワードを再入力してください'
               confirmation: 'パスワードが異なります'
-
-
